# iree

./: CMakeLists.txt
.github/workflows/: ci_windows_x64_msvc.yml
bindings/python/pyiree/rt/: BUILD
bindings/tflite/: BUILD  CMakeLists.txt  README.md  interpreter.c  tensor.c  tensor.h
compiler/src/iree/compiler/Dialect/IREEC/: CMakeLists.txt
compiler/src/iree/compiler/Dialect/IREEC/IR/: BUILD  CMakeLists.txt  IREEC.cpp  IREEC.h  IREEC.td  IREECAttributes.td  IREECBase.td  IREECTypes.td
compiler/src/iree/compiler/Dialect/IREEC/IR/test/: BUILD  CMakeLists.txt  test.mlir
compiler/src/iree/compiler/Dialect/VM/Conversion/VMToEmitC/: BUILD  BUILD.bazel  CMakeLists.txt  ConvertVMToEmitC.cpp  EmitCBuilders.cpp  EmitCBuilders.h  EmitCHelpers.cpp  EmitCHelpers.h  EmitCTypeConverter.h  IREECToEmitCPatterns.h  IREEModuleStructure.cpp  IREEModuleStructure.h  VMAnalysis.h  VMToEmitCPatterns.h  VMToIREECPatterns.h
compiler/src/iree/compiler/Dialect/VM/Conversion/VMToEmitC/test/: BUILD.bazel  CMakeLists.txt  buffer_ops.mlir  control_flow_ops.mlir  global_ops.mlir  list_ops.mlir  list_ops_f32.mlir  list_ops_f64.mlir
compiler/src/iree/compiler/Dialect/VM/Conversion/VMToIREEC/: BUILD  CMakeLists.txt  ConvertVMToIREEC.cpp  ConvertVMToIREEC.h  IREECTypeConverter.cpp  IREECTypeConverter.h  VMAnalysis.h
compiler/src/iree/compiler/Dialect/VM/Conversion/VMToIREEC/test/: BUILD  CMakeLists.txt  ireec_api.mlir
compiler/src/iree/compiler/Tools/: BUILD  CMakeLists.txt  init_iree_dialects.h  init_iree_passes.h
integrations/tensorflow/bindings/python/pyiree/tf/support/: module_utils.py
integrations/tensorflow/compiler/: iree-tf-import-main.cc
integrations/tensorflow/e2e/: BUILD
integrations/tensorflow/e2e/keras/: BUILD
integrations/tensorflow/e2e/keras/layers/: BUILD
integrations/tensorflow/e2e/math/: BUILD
iree/base/: api.h
iree/compiler/Dialect/Flow/Transforms/: DeduplicateExecutables.cpp  DispatchConfig.cpp  HLOToHLOPreprocessing.cpp
iree/compiler/Dialect/VM/Conversion/VMToEmitC/: ConvertVMToEmitC.cpp  ConvertVMToEmitC.h
iree/compiler/Dialect/VM/IR/: VMOps.td
iree/hal/: api.cc  api.h
iree/samples/emitc_modules/: import_module_a.mlir  import_module_b.mlir  import_module_test.cc
iree/samples/static_library_emitc/: CMakeLists.txt  static_library_demo.c
iree/samples/static_library_ssd/: CMakeLists.txt  create_bytecode_module.c  create_c_module.c  static_library_demo.c
iree/vm/: bytecode_dispatch.c  module.h  shims_emitc.h
iree/vm/test/: BUILD  CMakeLists.txt  global_ops.mlir  global_ops_f32.mlir  global_ops_i64.mlir  global_ops_ref.mlir  list_ops.mlir  list_variant_ops.mlir
runtime/bindings/python/: hal.cc
runtime/src/iree/modules/hal/utils/: buffer_diagnostics.c
runtime/src/iree/vm/: buffer.c  native_module.c  native_module_packing.h  ops_emitc.h  ref_cc.h  shims.h
runtime/src/iree/vm/bytecode/: dispatch.c
runtime/src/iree/vm/test/: BUILD.bazel  CMakeLists.txt  assignment_ops.mlir  control_flow_ops.mlir  list_ops_f32.mlir  list_ops_f64.mlir  ref_ops.mlir
runtime/src/iree/vm/test/emitc/: BUILD.bazel  CMakeLists.txt  module_test.cc
tools/: iree-run-mlir-main.cc
